--- a/app/src/main/res/layout/activity_malkasten.xml
+++ b/app/src/main/res/layout/activity_malkasten.xml
@@ -1,80 +1,120 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:background="@color/white"
-    tools:context=".MalkastenActivity">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             xmlns:custom="http://schemas.android.com/apk/res-auto"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="#0099cc"
+             tools:context="de.ludetis.android.malkasten.MalkastenActivity">
 
+    <!-- The primary full-screen view. This can be replaced with whatever view
+         is needed to present your content, e.g. VideoView, SurfaceView,
+         TextureView, etc. -->
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
-        <de.ludetis.android.view.ColorChooserView
-            android:layout_width="@dimen/chooser_size"
-            android:layout_height="@dimen/chooser_size"
-            custom:color="#d01020"/>
-        <de.ludetis.android.view.ColorChooserView
-            android:layout_width="@dimen/chooser_size"
-            android:layout_height="@dimen/chooser_size"
-            custom:color="#7020f0"/>
-        <de.ludetis.android.view.ColorChooserView
-            android:layout_width="@dimen/chooser_size"
-            android:layout_height="@dimen/chooser_size"
-            custom:color="#1060d0"/>
-        <de.ludetis.android.view.ColorChooserView
-            android:layout_width="@dimen/chooser_size"
-            android:layout_height="@dimen/chooser_size"
-            custom:color="#f0e000"/>
-        <de.ludetis.android.view.ColorChooserView
-            android:layout_width="@dimen/chooser_size"
-            android:layout_height="@dimen/chooser_size"
-            custom:color="#f08020"/>
+        android:id="@+id/fullscreen_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:background="@color/white">
 
-        <ImageView
-            android:id="@+id/share"
-            android:layout_width="@dimen/chooser_size"
-            android:layout_height="@dimen/chooser_size"
-            android:src="@drawable/share"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+            <de.ludetis.android.view.ColorChooserView
+                android:layout_width="@dimen/chooser_size"
+                android:layout_height="@dimen/chooser_size"
+                custom:color="#d01020"/>
+            <de.ludetis.android.view.ColorChooserView
+                android:layout_width="@dimen/chooser_size"
+                android:layout_height="@dimen/chooser_size"
+                custom:color="#7020f0"/>
+            <de.ludetis.android.view.ColorChooserView
+                android:layout_width="@dimen/chooser_size"
+                android:layout_height="@dimen/chooser_size"
+                custom:color="#1060d0"/>
+            <de.ludetis.android.view.ColorChooserView
+                android:layout_width="@dimen/chooser_size"
+                android:layout_height="@dimen/chooser_size"
+                custom:color="#f0e000"/>
+            <de.ludetis.android.view.ColorChooserView
+                android:layout_width="@dimen/chooser_size"
+                android:layout_height="@dimen/chooser_size"
+                custom:color="#f08020"/>
+
+            <ImageView
+                android:id="@+id/share"
+                android:layout_width="@dimen/chooser_size"
+                android:layout_height="@dimen/chooser_size"
+                android:src="@drawable/share"/>
 
         </LinearLayout>
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
 
-        <de.ludetis.android.view.ColorChooserView
-            android:layout_width="@dimen/chooser_size"
-            android:layout_height="@dimen/chooser_size"
-            custom:color="#101010"/>
-        <de.ludetis.android.view.ColorChooserView
-            android:layout_width="@dimen/chooser_size"
-            android:layout_height="@dimen/chooser_size"
-            custom:color="#e0e0e0"/>
-        <de.ludetis.android.view.ColorChooserView
-            android:layout_width="@dimen/chooser_size"
-            android:layout_height="@dimen/chooser_size"
-            custom:color="#508020"/>
-        <de.ludetis.android.view.ColorChooserView
-            android:layout_width="@dimen/chooser_size"
-            android:layout_height="@dimen/chooser_size"
-            custom:color="#80d020"/>
-        <de.ludetis.android.view.ColorChooserView
-            android:layout_width="@dimen/chooser_size"
-            android:layout_height="@dimen/chooser_size"
-            custom:color="#804040"/>
+            <de.ludetis.android.view.ColorChooserView
+                android:layout_width="@dimen/chooser_size"
+                android:layout_height="@dimen/chooser_size"
+                custom:color="#101010"/>
+            <de.ludetis.android.view.ColorChooserView
+                android:layout_width="@dimen/chooser_size"
+                android:layout_height="@dimen/chooser_size"
+                custom:color="#e0e0e0"/>
+            <de.ludetis.android.view.ColorChooserView
+                android:layout_width="@dimen/chooser_size"
+                android:layout_height="@dimen/chooser_size"
+                custom:color="#508020"/>
+            <de.ludetis.android.view.ColorChooserView
+                android:layout_width="@dimen/chooser_size"
+                android:layout_height="@dimen/chooser_size"
+                custom:color="#80d020"/>
+            <de.ludetis.android.view.ColorChooserView
+                android:layout_width="@dimen/chooser_size"
+                android:layout_height="@dimen/chooser_size"
+                custom:color="#804040"/>
+
+            <ImageView
+                android:id="@+id/trash"
+                android:layout_width="@dimen/chooser_size"
+                android:layout_height="@dimen/chooser_size"
+                android:src="@drawable/trash"/>
+        </LinearLayout>
 
         <ImageView
-            android:id="@+id/trash"
-            android:layout_width="@dimen/chooser_size"
-            android:layout_height="@dimen/chooser_size"
-            android:src="@drawable/trash"/>
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/image"
+            android:layout_weight="1"/>
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="0dp"
+
+    <!-- This FrameLayout insets its children based on system windows using
+         android:fitsSystemWindows. -->
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/image"
-        android:layout_weight="1"/>
-</LinearLayout>
+        android:fitsSystemWindows="true">
+
+        <LinearLayout
+            android:id="@+id/fullscreen_content_controls"
+            style="?metaButtonBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:background="@color/black_overlay"
+            android:orientation="horizontal"
+            tools:ignore="UselessParent">
+
+            <Button
+                android:id="@+id/dummy_button"
+                style="?metaButtonBarButtonStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/dummy_button"/>
+
+        </LinearLayout>
+    </FrameLayout>
+
+</FrameLayout>
