--- a/app/src/main/res/anim/shiver.xml
+++ b/app/src/main/res/anim/shiver.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<rotate xmlns:android="http://schemas.android.com/apk/res/android"
+<scale xmlns:android="http://schemas.android.com/apk/res/android"
       android:interpolator="@android:anim/accelerate_decelerate_interpolator"
       android:pivotX="50%"
       android:pivotY="50%"
-      android:duration="30"
-      android:fromDegrees="-2"
-      android:toDegrees="+2"
+      android:duration="20"
+       android:fromXScale="1"
+       android:toXScale="0.9"
+       android:fromYScale="1"
+       android:toYScale="0.9"
       android:repeatMode="reverse"
       android:repeatCount="5"
          />
