--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,3 +1,3 @@
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <cache-path name="my_images" path="images/"/>
+    <files-path name="images" path="images/"/>
 </paths>
